CHATS_SIT/force-app/main/default/objects/WebServiceConfiguration__mdt.object
<CustomObject>
    <fields>
        <fullName>UserName__c</fullName>
        <description>Username for Web Service Call</description>
        <inlineHelpText>Username for Web Service Call</inlineHelpText>
        <label>UserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Password for Web Service Call</description>
        <inlineHelpText>Password for Web Service Call</inlineHelpText>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthId__c</fullName>
        <description>Auth Id or Client Id for Web Service Call</description>
        <inlineHelpText>Auth Id or Client Id for Web Service Call</inlineHelpText>
        <label>Auth Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AuthToken__c</fullName>
        <description>Auth Token or Client Secret for Web Service Call</description>
        <inlineHelpText>Auth Token or Client Secret for Web Service Call</inlineHelpText>
        <label>Auth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>Service Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>WebService Configuration</label>
    <pluralLabel>WebServiceConfigurations</pluralLabel>
</CustomObject>